--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^5.16.0",
+    "husky": "^2.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
     "nyc": "^1.0.0",
     "showroom": "^0.9.3"
+  },
+  "husky": {
+      "hooks": {
+          "pre-commit": "npm run lint"
+      }
   }
 }
