--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - npm run lint
   #- npm run cover
   #- npm run nyc_init
-  - nyc npm run test
+  - npm run test
   - npm run doc
 
 after_script:
