--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
-    "showroom": "^0.9.3"
+    "showroom": "^0.9.3",
+    "web-component-tester": "^6.9.2",
+    "bower": "1.8.8"
   },
   "husky": {
     "hooks": {
