Set up wct + headless + travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
   - npm audit fix --force
   - npm run test
   - npm run doc
+  - bower install --save-dev web-component-tester
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
