--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ language: node_js
 node_js:
   - '10'
 
+addons:
+  chrome: stable
+
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
