--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 script:
   - npm install
   - npm update
-  - npm audit fix --force
+  - npm install hpack.js
   - npm run lint
   #- npm run cover
   #- npm run nyc_init
