--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "lint": "eslint . ./**/*.js",
+    "lint": "eslint . ./packages/*/*.js",
     "nyc_init": "nyc cover mocha",
     "test": "wct",
     "doc": "esdoc -c .esdoc.json",
