--- a/.travis.yml
+++ b/.travis.yml
@@ -28,17 +28,38 @@ after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GH_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep_history: true
-  on:
-    repo: ucsd-cse112/team6
-    branches: 
-      only:
-        - master
-    #all_branches: true
-  local_dir: ./docs
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GH_TOKEN  # Set in the settings page of your repository, as a secure variable
+    keep_history: true
+    on:
+      repo: ucsd-cse112/team6
+      branches: 
+        only:
+          - master
+      #all_branches: true
+    local_dir: ./docs
+
+  - provider: script
+    skip_cleanup: true
+    github_token: $GH_TOKEN  # Set in the settings page of your repository, as a secure variable
+    keep_history: true
+    script:
+      - npm run build
+    on:
+      repo: ucsd-cse112/team6
+      branches: 
+        only:
+          - master
+  
+  - provider: npm
+    email: $NPM_EMAIL
+    api_key: $NPM_TOKEN
+    on:
+      repo: ucsd-cse112/team6
+      branches:
+        only:
+          - master
   
 
 
