--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lannister-component",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "An Open Source web component by UCSD Students",
   "main": "index.js",
   "publishConfig": {
@@ -15,14 +15,14 @@
     "build": "./node_modules/.bin/rollup -c"
   },
   "files": [
-    "bundle.js"
+    "dist/bundle.js"
   ],
   "author": "Team Lannister",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ucsd-cse112/team6.git"
   },
-  "unpkg": "bundle.js",
+  "unpkg": "dist/bundle.js",
   "license": "ISC",
   "devDependencies": {
     "bower": "1.8.8",
